--- a/dev/page_dev/test_1.html
+++ b/dev/page_dev/test_1.html
@@ -10,7 +10,7 @@
 
       <!-- contents -->
       <div id="contents">
-        single_blog page 
+        about page 입니다
       </div>
       <!-- //contents -->
 
