--- a/dev/page_dev/test_4.html
+++ b/dev/page_dev/test_4.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>finsweet8</title>
-    <!-- css -->
-    <link rel="stylesheet" href="../assets/plugin/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <link rel="stylesheet" href="../assets/css/display_kim.css">
-    <link rel="stylesheet" href="../assets/css/display_soo.css">
-</head>
-<body>
+<!-- @@master ../layout_template.html -->
+
+<!-- @@block root_content -->
 
 <!-- wrapper -->
 <div id="wrapper">
@@ -103,57 +92,14 @@
               </div>
             </div>
 
+
             <!-- <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div> -->
 
           </div>
-<!-- layout_your_inbox -->
-<div class="inbox_wrap">
-  <div class="inbox">
-    <p class="heading_2">Receive new episodes in your inbox.</p>
-    <p class="email_send">
-      <input type="email" placeholder="Enter Your Email Id">
-      <input type="submit" value="Subscribe">
-    </p>
-  </div>
-</div>
-<!-- //layout_your_inbox -->
+          <!-- @@include ../page_include/layout_your_inbox.html -->
 
-
-
-<!-- laytout_list -->
-<div class="con-m con_pd">
-  <ul class="item_list_wrap">
-    <li>
-      <a href="#none" class="item">
-        <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img">
-      </a>
-    </li>
-    <li>
-      <a href="#none" class="item">
-        <img src="../assets/images/contents/articles_1.png" alt="articleNews_img">
-        <div>
-          <p class="heading_3">Getting the first 100 customers for your business</p>
-          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <p class="btn_listen">Read Now</p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#none"  class="item">
-        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img">
-        <div>
-          <p class="heading_3">Apparently we had reached a great height in the atmosphere, ...</p>
-          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <p class="btn_listen">Read Now</p>
-        </div>
-      </a>
-    </li>
-  </ul>
-</div>
-<!-- //laytout_list -->
-
-
+          <!-- @@include ../page_include/layout_list.html -->
 
         </div><!-- //home_wrap -->
       </div>
@@ -165,10 +111,4 @@
 </div>
 <!-- //wrapper -->
 
-
-
-    <!-- js -->
-    <script src="../assets/plugin/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/js/main.js"></script>
-</body>
-</html>
+<!-- @@close -->
