--- a/dev/page_dev/test_8.html
+++ b/dev/page_dev/test_8.html
@@ -10,7 +10,7 @@
 
       <!-- contents -->
       <div id="contents">
-        about page
+        single_blog page
       </div>
       <!-- //contents -->
 
