--- a/pages/test_1.html
+++ b/pages/test_1.html
@@ -21,7 +21,7 @@
 
       <!-- contents -->
       <div id="contents">
-        single_blog page 
+        about page 입니다
       </div>
       <!-- //contents -->
 
