--- a/pages/test_8.html
+++ b/pages/test_8.html
@@ -21,7 +21,7 @@
 
       <!-- contents -->
       <div id="contents">
-        about page
+        single_blog page
       </div>
       <!-- //contents -->
 
