--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <h1>Finsweet8 List</h1>
 
     <ul>
+      <li><a href="./pages/test_1.html" target="_blank" title="새창열림">Promotion</a></li>
+      <li><a href="./pages/test_2.html" target="_blank" title="새창열림">Home</a></li>
+      <li><a href="./pages/test_3.html" target="_blank" title="새창열림">Host</a></li>
+      <li><a href="./pages/test_4.html" target="_blank" title="새창열림">Podcasts</a></li>
+      <li><a href="./pages/test_5.html" target="_blank" title="새창열림">Single Podcast</a></li>
+      <li><a href="./pages/test_6.html" target="_blank" title="새창열림">About</a></li>
+      <li><a href="./pages/test_7.html" target="_blank" title="새창열림">Blog</a></li>
+      <li><a href="./pages/test_8.html" target="_blank" title="새창열림">Single Blog</a></li>
+      <li><a href="./pages/test_9.html" target="_blank" title="새창열림">Contact</a></li>
+    </ul>
+
+    <!-- <ul>
       <li><a href="./pages/promotion.html" target="_blank" title="새창열림">Promotion</a></li>
       <li><a href="./pages/home.html" target="_blank" title="새창열림">Home</a></li>
       <li><a href="./pages/host.html" target="_blank" title="새창열림">Host</a></li>
@@ -24,7 +36,7 @@
       <li><a href="./pages/blog.html" target="_blank" title="새창열림">Blog</a></li>
       <li><a href="./pages/single_blog.html" target="_blank" title="새창열림">Single Blog</a></li>
       <li><a href="./pages/contact.html" target="_blank" title="새창열림">Contact</a></li>
-    </ul>
+    </ul> -->
 </body>
 
 </html>
