--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -10,7 +10,46 @@
 
       <!-- contents -->
       <div id="contents">
-        about page 입니다
+        <!-- our_team -->
+        <div class="our_team">
+          <div class="our_t_tit_wrap">
+            <h2 class="heading_2">A few words about our team</h2>
+            <div class="our_t_img_wrap"></div>
+            <div class="our_t_txt">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
+                eget condimentum enim libero ultricies amet odio fringilla. Ut nibh
+                morbi augue porta aliquet commodo. Fermentum auctor lacus
+                eget in ut integer viverra sed. Penatibus tortor consequat,
+                habitasse non nisl.</p>
+              <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>Mus
+                cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                volutpat ut netus malesuada enim penatibus non aliquet.</p>
+            </div>
+          </div>
+        </div>
+        <!-- //our_team -->
+
+        <!-- our_sponsors -->
+        <div class="our_sponsors">
+          <div class="our_s_tit_wrap">
+            <h2 class="heading_2">Our Sponsors</h2>
+            <div class="our_s_con">
+              <ul>
+                <li><img src="../../assets/images/logo/logoipsum_b_1.png" alt="logoipsum"></li>
+                <li><img src="../../assets/images/logo/logoipsum_b_2.png" alt="logoipsum"></li>
+                <li><img src="../../assets/images/logo/logoipsum_b_3.png" alt="logoipsum"></li>
+                <li><img src="../../assets/images/logo/logoipsum_b_4.png" alt="logoipsum"></li>
+                <li><img src="../../assets/images/logo/logoipsum_b_5.png" alt="logoipsum"></li>
+                <li>
+                  <p>Become a</br>Sponsors</p>
+                  <span class="contact">Contact Now</span>
+                  <span class="line"></span>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- //our_sponsors -->
       </div>
       <!-- //contents -->
 
