--- a/pages/host.html
+++ b/pages/host.html
@@ -18,6 +18,10 @@
   
   <!-- container -->
   <div class="container">
+
+      <!-- dark_mode -->
+      <input class="dark_mode" type="checkbox">
+      <!-- // dark_mode -->
     
       <!-- contents -->
       <div id="contents">
@@ -28,7 +32,7 @@
             <div class="host_top_img"></div>
             <div class="host_tit_wrap">
               <div class="host_tit">
-                <em>ABOUT THE HOST</em>
+                <h2>ABOUT THE HOST</h2>
                 <p class="heading_2 host_tit_sub">Hey there, I’m Andrew Jonson and welcome to my Podcast</p>
                 <p class="host_sub">Apparently we had reached a great height in the
                   atmosphere, for the sky was a dead black, and the
@@ -57,7 +61,10 @@
 
           <!-- origins -->
           <div class="origins_wrap">
+            <h2 class="blind">Youtube and tech journalist</h2>
             <div class="ori_con">
+
+              <!-- origins_txt -->
               <div class="origins_txt">
                 <p class="heading_2">My origins on YouTube</br>in 2008</p>
                 <p class="con_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -72,6 +79,9 @@
                     aliquet.
                 </p>
               </div>
+              <!-- //origins_txt -->
+
+              <!-- journalist_txt -->
               <div class="journalist_txt">
                 <p class="heading_2">From tech journalist, to Vlogger and YouTuber</p>
                 <p class="con_txt">
@@ -88,9 +98,25 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
                   eget condimentum enim libero ultricies ame\</p>
               </div>
+              <!-- //journalist_txt -->
+
             </div>
           </div>
           <!-- //origins -->
+
+          <!-- potcasts_n_view -->
+          <div class="potcasts_n_view_wrap">
+            <h2 class="blind">potcasts and views</h2>
+            <div class="pot_vi">
+              <ul>
+                <li class="heading_2"><i></i><span class="heading_1">500+</span>Potcasts</li>
+                <li class="heading_2"><i></i><span class="heading_1">24M</span>Views</li>
+                <li class="heading_2"><i></i><span class="heading_1">600K</span>Subscribers</li>
+                <li class="heading_2"><i></i><span class="heading_1">24M</span>Views</li>
+              </ul>
+            </div>
+          </div>
+          <!-- //potcasts_n_view -->
         </div>
       </div>
       <!-- //contents -->
