--- a/pages/podcast.html
+++ b/pages/podcast.html
@@ -15,12 +15,28 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-
+  
   <!-- container -->
   <div class="container">
+
       <!-- contents -->
       <div id="contents">
-        podcast page
+        <div class="contents_wrap">
+
+          <div class="potcast_top">
+            <div class="potcast_tit_wrap">
+              <div class="potcast_tit">
+                <h2>Featured</h2>
+                <p class="heading_2 potcast_tit_sub">A UX Case Study on Creating a Studious Environment</p>
+                <p class="potcast_sub">Apparently we had reached a great height in the atmosphere, for the sky was
+                  a dead black, and the stars had ceased to twinkle. By the same illusion which
+                  lifts the horizon
+                </p>
+                <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- //contents -->
 
