promotion페이지 수정작업 / 컴포넌트작업진행

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -8,7 +8,7 @@
   <div class="container">
       <!-- contents -->
       <div id="contents">
-        <div class="home_wrap">
+        <div class="home_wrap page_home">
           <div class="main_top">
             <div class="main_tit">
               <p class="heading_1">Become The Hero Of Your Own Story</p>
@@ -55,51 +55,52 @@
             </div>
           </div> <!-- //sec_wrap -->
 
-          <div class="custom_swiper con-m con_pd">
-            <div class="custom_wrap">
-              <div class="custom_item">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
-                  <p class="heading_5">Eve Madien</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
-                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
-                </div>
-              </div>
-              <div class="custom_item">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
-                  <p class="heading_5">Ash Benfred</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                </div>
-              </div>
-              <div class="custom_item">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
-                  <p class="heading_5">Ryan Smith</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
-                </div>
-              </div>
+
+          <div class="list_type custom_swiper con-m con_pd">
+            <!-- typ_list_wrap -->
+            <div class="typ_list_wrap">
+              <ul class="custom_wrap">
+                <li>
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                    <p class="heading_5">Eve Madien</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                    Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
+                  </div>
+                </li>
+                <li>
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                    <p class="heading_5">Ash Benfred</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  </div>
+                </li>
+                <li>
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                    <p class="heading_5">Ryan Smith</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                    Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                    Penatibus tortor consequat.
+                  </div>
+                </li>
+              </ul>
             </div>
-
-
+            <!-- //typ_list_wrap -->
             <!-- <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div> -->
-
           </div>
-          <!-- @@include ../page_include/layout_your_inbox.html -->
 
-          <!-- @@include ../page_include/layout_list.html -->
+          <!-- @@include ../page_include/layout_your_inbox.html -->
 
         </div><!-- //home_wrap -->
       </div>
