--- a/dev/page_include/footer_sponsors.html
+++ b/dev/page_include/footer_sponsors.html
@@ -1,12 +1,14 @@
 <!-- footer_sponsors -->
-<div class="footer_sponsors con-m">
-<h3 class="heading_2">Our Sponsors</h3>
-<div class="logoipsum">
-    <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
-</div>
+<div class="con_pd con-m">
+  <div class="footer_sponsors">
+    <h3 class="heading_2">Our Sponsors</h3>
+    <div class="logoipsum">
+        <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+    </div>
+  </div>
 </div>
 <!-- //footer_sponsors -->
