--- a/dev/page_include/layout_your_inbox.html
+++ b/dev/page_include/layout_your_inbox.html
@@ -1,11 +1,13 @@
 <!-- layout_your_inbox -->
-<div class="inbox_wrap">
-  <div class="inbox">
-    <p class="heading_2">Receive new episodes in your inbox.</p>
-    <p class="email_send">
-      <input type="email" placeholder="Enter Your Email Id">
-      <input type="submit" value="Subscribe">
-    </p>
+<div class="con_pd con-m">
+  <div class="inbox_wrap">
+    <div class="inbox">
+      <p class="heading_2">Receive new episodes in your inbox.</p>
+      <p class="email_send">
+        <input type="email" placeholder="Enter Your Email Id">
+        <input type="submit" value="Subscribe">
+      </p>
+    </div>
   </div>
 </div>
 <!-- //layout_your_inbox -->
