--- a/pages/home.html
+++ b/pages/home.html
@@ -19,7 +19,7 @@
   <div class="container">
       <!-- contents -->
       <div id="contents">
-        <div class="home_wrap">
+        <div class="home_wrap page_home">
           <div class="main_top">
             <div class="main_tit">
               <p class="heading_1">Become The Hero Of Your Own Story</p>
@@ -66,93 +66,64 @@
             </div>
           </div> <!-- //sec_wrap -->
 
-          <div class="custom_swiper con-m con_pd">
-            <div class="custom_wrap">
-              <div class="custom_item">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
-                  <p class="heading_5">Eve Madien</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
-                  Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
-                </div>
-              </div>
-              <div class="custom_item">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
-                  <p class="heading_5">Ash Benfred</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                </div>
-              </div>
-              <div class="custom_item">
-                <div class="my_review">
-                  <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
-                  <p class="heading_5">Ryan Smith</p>
-                </div>
-                <div class="heading_5 review_con">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Lorem eget condimentum enim libero ultricies amet odio fringilla.
-                  Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
-                  Penatibus tortor consequat.
-                </div>
-              </div>
+
+          <div class="list_type custom_swiper con-m con_pd">
+            <!-- typ_list_wrap -->
+            <div class="typ_list_wrap">
+              <ul class="custom_wrap">
+                <li>
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_1.png" alt="Eve Madien" class="profile_img">
+                    <p class="heading_5">Eve Madien</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla. Ut nibh morbi augue porta aliquet commodo.
+                    Fermentum auctor lacus eget in ut integer viverra sed. Penatibus tortor consequat.
+                  </div>
+                </li>
+                <li>
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_2.png" alt="Ash Benfred" class="profile_img">
+                    <p class="heading_5">Ash Benfred</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                  </div>
+                </li>
+                <li>
+                  <div class="my_review">
+                    <img src="../assets/images/contents/listeners_3.png" alt="Ryan Smith" class="profile_img">
+                    <p class="heading_5">Ryan Smith</p>
+                  </div>
+                  <div class="heading_5 review_con">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Lorem eget condimentum enim libero ultricies amet odio fringilla.
+                    Ut nibh morbi augue porta aliquet commodo. Fermentum auctor lacus eget in ut integer viverra sed.
+                    Penatibus tortor consequat.
+                  </div>
+                </li>
+              </ul>
             </div>
-
-
+            <!-- //typ_list_wrap -->
             <!-- <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div> -->
-
           </div>
+
 <!-- layout_your_inbox -->
-<div class="inbox_wrap">
-  <div class="inbox">
-    <p class="heading_2">Receive new episodes in your inbox.</p>
-    <p class="email_send">
-      <input type="email" placeholder="Enter Your Email Id">
-      <input type="submit" value="Subscribe">
-    </p>
+<div class="con_pd con-m">
+  <div class="inbox_wrap">
+    <div class="inbox">
+      <p class="heading_2">Receive new episodes in your inbox.</p>
+      <p class="email_send">
+        <input type="email" placeholder="Enter Your Email Id">
+        <input type="submit" value="Subscribe">
+      </p>
+    </div>
   </div>
 </div>
 <!-- //layout_your_inbox -->
-
-
-
-<!-- laytout_list -->
-<div class="con-m con_pd">
-  <ul class="item_list_wrap">
-    <li>
-      <a href="#none" class="item">
-        <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img">
-      </a>
-    </li>
-    <li>
-      <a href="#none" class="item">
-        <img src="../assets/images/contents/articles_1.png" alt="articleNews_img">
-        <div>
-          <p class="heading_3">Getting the first 100 customers for your business</p>
-          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <p class="btn_listen">Read Now</p>
-        </div>
-      </a>
-    </li>
-    <li>
-      <a href="#none"  class="item">
-        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img">
-        <div>
-          <p class="heading_3">Apparently we had reached a great height in the atmosphere, ...</p>
-          <p class="heading_5">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <p class="btn_listen">Read Now</p>
-        </div>
-      </a>
-    </li>
-  </ul>
-</div>
-<!-- //laytout_list -->
 
 
 
