--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -78,23 +78,26 @@
                   <div>
                     <!-- btn -->
                     <div class="btn_com_list">
-                      <a href="#none" class="btn_1">Button</a>
-                      <a href="#none"class="btn_2">Secondary</a>
-                      <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
-                      <a href="#none" class="btn_read">Read Now</a>
+                      <a href="#none" class="btn_typ_01 btn_1">Button</a>
+                      <a href="#none"class="btn_typ_01 btn_2">Secondary</a>
+                      <!-- btn_bg_del은 빼고 btn_3만 사용 (보여주기위한 배경색넣음) -->
+                      <span class="btn_bg_del">
+                        <a href="#none"class="btn_typ_01 btn_3">Secondary</a>
+                      </span>
+                      <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+                      <a href="#none" class="btn_typ_02 btn_read">Read Now</a>
                     </div>
-                    <a href="#none" class="btn_read">Read Now</a>
                     <div class="btn_hover_list">
-                      <a href="#none" class="btn_1">Hover</a>
-                      <a href="#none" class="btn_2">Hover</a>
-                      <a href="#none" class="btn_listen"><i class="play"></i>Hover</a>
-                      <a href="#none" class="btn_read">Hover</a>
+                      <a href="#none" class="btn_typ_01 btn_1">Hover</a>
+                      <a href="#none" class="btn_typ_01 btn_2">Hover</a>
+                      <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Hover</a>
+                      <a href="#none" class="btn_typ_02 btn_read">Hover</a>
                     </div>
                     <!-- //btn -->
 
                     <!-- category potcasts -->
                     <div class="category_potcasts">
-                      <a href="#none" class="cate_pot_on">All Podcasts</a>
+                      <a href="#none" class="cate_pot on">All Podcasts</a>
                       <a href="#none" class="cate_pot">Startup</a>
                       <a href="#none" class="cate_pot">Marketing</a>
                       <a href="#none" class="cate_pot">Business</a>
@@ -106,10 +109,18 @@
 
                     <!-- potcasts -->
                     <ul class="potcasts_list">
-                      <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a>
-                      <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
-                      <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
-                      <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                      <li>
+                        <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a>
+                      </li>
+                      <li>
+                        <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                      </li>
+                      <li>
+                        <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                      </li>
+                      <li>
+                        <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                      </li>
                     </ul>
                     <!-- //potcasts -->
 
@@ -134,7 +145,56 @@
 
         </div>
         </br></br></br></br></br></br>
-        <!-- @@include ../page_include/recent_episodes.html -->
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">list type 01</h2>
+          <p class="heading_4">type : title 있는 list</p>
+        </div>
+        <!-- @@include ../page_include/layout_list_typ_01.html -->
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">list type 02</h2>
+          <p class="heading_4">type : title 없는 list</p>
+        </div>
+        <!-- @@include ../page_include/layout_list_typ_02.html -->
+
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">banner</h2>
+        </div>
+        <div class="con-m page_host"> <!-- page_host는 host페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
+          <div class="layout_banner_wrap">
+            <div>
+              <p class="heading_1">Become The Hero Of Your Own Story</p>
+              <p class="heading_5 sub_txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                volutpat ut netus malesuada enim penatibus non aliquet.
+              </p>
+              <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="con-m page_padcast"> <!-- page_padcast는 padcast페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
+          <div class="layout_banner_wrap">
+            <div>
+              <p class="heading_1">Become The Hero Of Your Own Story</p>
+              <p class="heading_5 sub_txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                volutpat ut netus malesuada enim penatibus non aliquet.
+              </p>
+              <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">top section</h2>
+        </div>
+
         <!-- @@include ../page_include/footer_sponsors.html -->
         <!-- //contents -->
 
