--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -145,23 +145,26 @@
                   <div>
                     <!-- btn -->
                     <div class="btn_com_list">
-                      <a href="#none" class="btn_1">Button</a>
-                      <a href="#none"class="btn_2">Secondary</a>
-                      <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
-                      <a href="#none" class="btn_read">Read Now</a>
+                      <a href="#none" class="btn_typ_01 btn_1">Button</a>
+                      <a href="#none"class="btn_typ_01 btn_2">Secondary</a>
+                      <!-- btn_bg_del은 빼고 btn_3만 사용 (보여주기위한 배경색넣음) -->
+                      <span class="btn_bg_del">
+                        <a href="#none"class="btn_typ_01 btn_3">Secondary</a>
+                      </span>
+                      <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
+                      <a href="#none" class="btn_typ_02 btn_read">Read Now</a>
                     </div>
-                    <a href="#none" class="btn_read">Read Now</a>
                     <div class="btn_hover_list">
-                      <a href="#none" class="btn_1">Hover</a>
-                      <a href="#none" class="btn_2">Hover</a>
-                      <a href="#none" class="btn_listen"><i class="play"></i>Hover</a>
-                      <a href="#none" class="btn_read">Hover</a>
+                      <a href="#none" class="btn_typ_01 btn_1">Hover</a>
+                      <a href="#none" class="btn_typ_01 btn_2">Hover</a>
+                      <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Hover</a>
+                      <a href="#none" class="btn_typ_02 btn_read">Hover</a>
                     </div>
                     <!-- //btn -->
 
                     <!-- category potcasts -->
                     <div class="category_potcasts">
-                      <a href="#none" class="cate_pot_on">All Podcasts</a>
+                      <a href="#none" class="cate_pot on">All Podcasts</a>
                       <a href="#none" class="cate_pot">Startup</a>
                       <a href="#none" class="cate_pot">Marketing</a>
                       <a href="#none" class="cate_pot">Business</a>
@@ -173,10 +176,18 @@
 
                     <!-- potcasts -->
                     <ul class="potcasts_list">
-                      <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a>
-                      <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
-                      <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
-                      <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                      <li>
+                        <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a>
+                      </li>
+                      <li>
+                        <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                      </li>
+                      <li>
+                        <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                      </li>
+                      <li>
+                        <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                      </li>
                     </ul>
                     <!-- //potcasts -->
 
@@ -201,63 +212,148 @@
 
         </div>
         </br></br></br></br></br></br>
-<!-- recent_episodes -->
-<div class="recent_episodes con_pd">
-  <!-- recent_text -->
-  <div class="section_tit_1 recent_text">
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">list type 01</h2>
+          <p class="heading_4">type : title 있는 list</p>
+        </div>
+<!-- list_typ_01 -->
+<div class="list_type list_typ_01 con_pd">
+  <div class="typ_tit_wrap">
     <h2 class="heading_2">Recent Episodes</h2>
     <p>Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black.</p>
-    <a href="#none" class="btn_1 btn_recent">See All Episodes</a>
+    <a href="#none" class="btn_typ_01 btn_1 btn_recent">See All Episodes</a>
   </div>
-  <!-- //recent_text -->
 
-  <!-- recent_video -->
-  <div class="recent_video">
+  <!-- typ_list_wrap -->
+  <div class="typ_list_wrap">
     <ul>
       <li>
-        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen></iframe>
-        <div class="recent_video_text">
+        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
-          <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
       <li>
-        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen></iframe>
-        <div class="recent_video_text">
+        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
-          <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
       <li>
-        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen></iframe>
-        <div class="recent_video_text">
+        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen class="typ_list_img"></iframe>
+        <div class="typ_sub_wrap">
           <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
-          <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_typ_02 btn_listen"><i class="play"></i>Listen Now</a>
           <a href="#none" class="mute"><i class="ico_mute"></i></a>
         </div>
       </li>
     </ul>
   </div>
-  <!-- //recent_video -->
+  <!-- //typ_list_wrap -->
 </div>
-<!-- //recent_episodes -->
+<!-- //list_typ_01 -->
 
+
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">list type 02</h2>
+          <p class="heading_4">type : title 없는 list</p>
+        </div>
+<!-- list_typ_02 -->
+<div class="list_type list_typ_02 con_pd">
+  <!-- typ_list_wrap -->
+  <div class="typ_list_wrap">
+    <ul>
+      <li>
+        <a href="#none">
+          <img src="../assets/images/contents/bg_con_1.png" alt="articleNews_img" class="typ_list_img">
+        </a>
+      </li>
+      <li>
+        <a href="#none">
+          <img src="../assets/images/contents/articles_1.png" alt="articleNews_img" class="typ_list_img">
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Getting the first 100 customers for your business</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <p class="btn_typ_02 btn_listen">Read Now</p>
+          </div>
+        </a>
+      </li>
+      <li>
+        <a href="#none">
+        <img src="../assets/images/contents/articles_2.png" alt="articleNews_img" class="typ_list_img">
+          <div class="typ_sub_wrap">
+            <h3 class="heading_3">Apparently we had reached a great height in the atmosphere, ...</h3>
+            <p class="heading_5 sub_txt">Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <p class="btn_typ_02 btn_listen">Read Now</p>
+          </div>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- //typ_list_wrap -->
+</div>
+<!-- //list_typ_02 -->
+
+
+
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">banner</h2>
+        </div>
+        <div class="con-m page_host"> <!-- page_host는 host페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
+          <div class="layout_banner_wrap">
+            <div>
+              <p class="heading_1">Become The Hero Of Your Own Story</p>
+              <p class="heading_5 sub_txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                volutpat ut netus malesuada enim penatibus non aliquet.
+              </p>
+              <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="con-m page_padcast"> <!-- page_padcast는 padcast페이지 최상단 div에 넣어주고 여기에 있는건 빼면됨  -->
+          <div class="layout_banner_wrap">
+            <div>
+              <p class="heading_1">Become The Hero Of Your Own Story</p>
+              <p class="heading_5 sub_txt">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Mus cras lacus tellus morbi viverra suspendisse ornare. Sit volutpat,
+                volutpat ut netus malesuada enim penatibus non aliquet.
+              </p>
+              <a href="#none" class="btn_typ_01 btn_3">Secondary</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="promo_only color_2">
+          <h2 class="heading_1">top section</h2>
+        </div>
 
 <!-- footer_sponsors -->
-<div class="footer_sponsors con-m">
-<h3 class="heading_2">Our Sponsors</h3>
-<div class="logoipsum">
-    <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
-    <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
-</div>
+<div class="con_pd con-m">
+  <div class="footer_sponsors">
+    <h3 class="heading_2">Our Sponsors</h3>
+    <div class="logoipsum">
+        <img src="../assets/images/logo/logoipsum_1.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_2.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_3.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_4.png" alt="logoipsum">
+        <img src="../assets/images/logo/logoipsum_5.png" alt="logoipsum">
+    </div>
+  </div>
 </div>
 <!-- //footer_sponsors -->
         <!-- //contents -->
@@ -269,10 +365,8 @@
 
 <!-- footer -->
 <footer>
-
   <!-- footer_con -->
   <div class="footer_con">
-
     <div class="logo_wrap">
       <a href="Home.html"><img src="../assets/images/logo/logo_w.svg" alt="finsweet"></a>
     </div>
