css일부 취합/ 공통컴포넌트 작업

--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -7,8 +7,8 @@
   <!-- container -->
   <div class="container">
       <!-- contents -->
-      <div id="contents">
-        <div class="home_wrap page_home">
+      <div id="contents" class="page_home">
+        <div class="home_wrap">
           <div class="main_top">
             <div class="main_tit">
               <p class="heading_1">Become The Hero Of Your Own Story</p>
