--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -4,30 +4,30 @@
 
 <!-- wrapper -->
 <div id="wrapper">
-  
+
   <!-- container -->
   <div class="container">
 
       <!-- dark_mode -->
       <input class="dark_mode" type="checkbox">
       <!-- // dark_mode -->
-    
+
       <!-- contents -->
-      <div id="contents">
+      <div id="contents" class="page_host">
         <div class="host_wrap">
 
           <!-- host_top -->
           <div class="host_top">
             <div class="host_top_img"></div>
             <div class="host_tit_wrap">
-              <div class="host_tit">
+              <div class="typ_sec typ_sec_02">
                 <h2>ABOUT THE HOST</h2>
-                <p class="heading_2 host_tit_sub">Hey there, I’m Andrew Jonson and welcome to my Podcast</p>
-                <p class="host_sub">Apparently we had reached a great height in the
+                <p class="heading_2 top_sub_01">Hey there, I’m Andrew Jonson and welcome to my Podcast</p>
+                <p class="top_sub_txt_02">Apparently we had reached a great height in the
                   atmosphere, for the sky was a dead black, and the
                   stars had ceased to twinkle.
                 </p>
-                <a href="#none" class="btn_1">Know More</a>
+                <a href="#none" class="btn_typ_01 btn_1">Know More</a>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
                   nibh morbi augue porta aliquet commodo. Fermentum auctor
                   lacus eget in ut integer viverra sed. Penatibus tortor
                   consequat, habitasse non nisl.
-                  
+
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem
                   eget condimentum enim libero ultricies ame\</p>
               </div>
