--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -194,6 +194,39 @@
         <div class="promo_only color_2">
           <h2 class="heading_1">top section</h2>
         </div>
+        <div class="top_sec_wrap con_pd page_s_podcast"><!-- page_s_podcast 페이지에 넣는 컴포넌트-->
+          <div class="top_img_wrap">
+            <img src="../assets/images/contents/common_con_2.png" alt="business_img">
+            <a href="#none" class="mute"><i class="ico_mute"></i></a>
+          </div>
+          <div class="typ_sec typ_sec_01">
+            <h2>Business</h2>
+            <p class="heading_2 top_sub_01">Ep 2: Getting the first 100 customers for your business</p>
+            <p class="top_sub_txt_02">
+              Apparently we had reached a great height in the atmosphere, for the sky was a dead black,
+              and the stars had ceased to twinkle. By the same illusion which lifts the horizon
+            </p>
+            <a href="#none" class="btn_typ_01 btn_1">Listen now</a>
+          </div>
+        </div>
+
+        <div class="top_sec_wrap con_pd con-m page_blog"><!-- con-m빼고 가져가기 / page_blog페이지에 넣는 컴포넌트-->
+          <div class="top_img_wrap">
+            <img src="../assets/images/contents/main_blog.png" alt="featured_img">
+          </div>
+          <div class="typ_sec typ_sec_01">
+            <h2>Featured</h2>
+            <p class="heading_2 top_sub_01">Should I raise money for my startup, or not?</p>
+            <p class="top_sub_txt_02">
+              Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+              sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+            </p>
+            <a href="#none" class="btn_typ_02 btn_read">Read Now</a>
+          </div>
+        </div>
+
+
+
 
         <!-- @@include ../page_include/footer_sponsors.html -->
         <!-- //contents -->
