공통 컴포넌트 작업

--- a/dev/page_dev/about.html
+++ b/dev/page_dev/about.html
@@ -8,8 +8,12 @@
   <!-- container -->
   <div class="container">
 
+    <!-- dark_mode -->
+    <input class="dark_mode" type="checkbox">
+    <!-- // dark_mode -->
+    
       <!-- contents -->
-      <div id="contents">
+      <div id="contents" class="page_about">
         <!-- our_team -->
         <div class="our_team">
           <div class="our_t_tit_wrap">
@@ -42,7 +46,7 @@
                 <li><img src="../../assets/images/logo/logoipsum_b_5.png" alt="logoipsum"></li>
                 <li>
                   <p>Become a</br>Sponsors</p>
-                  <span class="contact">Contact Now</span>
+                  <a href="#none" class="contact">Contact Now</a>
                   <span class="line"></span>
                 </li>
               </ul>
