--- a/dev/page_dev/blog.html
+++ b/dev/page_dev/blog.html
@@ -6,7 +6,7 @@
 <div id="wrapper">
 
   <!-- container -->
-  <div class="container">
+  <div class="container" class="page_blog">
 
       <!-- contents -->
       <div id="contents">
