--- a/dev/page_dev/home.html
+++ b/dev/page_dev/home.html
@@ -25,7 +25,7 @@
           <div class="mq_logo_list">
             <marquee scrollamount=10>
               <a href="#none"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
-              <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts logo"></a>
+              <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
               <a href="#none"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
               <a href="#none"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
               <a href="#none"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
