--- a/dev/page_dev/host.html
+++ b/dev/page_dev/host.html
@@ -34,10 +34,11 @@
           <!-- //host_top -->
 
           <!-- mq_logo_list -->
-          <div class="mq_logo_list">
+          <!-- 221109 - mq_logo_list 자체 margin 확인 -->
+          <div class="mq_logo_list con-m">
             <marquee scrollamount=10>
               <a href="#none"><img src="../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
-              <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts logo"></a>
+              <a href="#none"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts logo"></a>
               <a href="#none"><img src="../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
               <a href="#none"><img src="../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
               <a href="#none"><img src="../assets/images/logo/spotify.png" alt="spotify logo"></a>
@@ -93,19 +94,19 @@
           </div>
           <!-- //origins -->
 
-          <!-- potcasts_n_view -->
-          <div class="potcasts_n_view_wrap">
-            <h2 class="blind">potcasts and views</h2>
-            <div class="pot_vi">
+          <!-- podcasts_n_view -->
+          <div class="podcasts_n_view_wrap">
+            <h2 class="blind">podcasts and views</h2>
+            <div class="pod_vi">
               <ul>
-                <li class="heading_2"><i></i><span class="heading_1">500+</span>Potcasts</li>
+                <li class="heading_2"><i></i><span class="heading_1">500+</span>Podcasts</li>
                 <li class="heading_2"><i></i><span class="heading_1">24M</span>Views</li>
                 <li class="heading_2"><i></i><span class="heading_1">600K</span>Subscribers</li>
                 <li class="heading_2"><i></i><span class="heading_1">24M</span>Views</li>
               </ul>
             </div>
           </div>
-          <!-- //potcasts_n_view -->
+          <!-- //podcasts_n_view -->
         </div>
       </div>
       <!-- //contents -->
