--- a/dev/page_dev/podcast.html
+++ b/dev/page_dev/podcast.html
@@ -4,20 +4,21 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <!-- @@include ../page_include/header.html -->
   
   <!-- container -->
   <div class="container">
 
       <!-- contents -->
-      <div id="contents">
+      <div id="contents" class="page_podcast">
         <div class="contents_wrap">
 
-          <div class="potcast_top">
-            <div class="potcast_tit_wrap">
-              <div class="potcast_tit">
+          <div class="podcast_top">
+            <div class="podcast_tit_wrap">
+              <div class="podcast_tit">
                 <h2>Featured</h2>
-                <p class="heading_2 potcast_tit_sub">A UX Case Study on Creating a Studious Environment</p>
-                <p class="potcast_sub">Apparently we had reached a great height in the atmosphere, for the sky was
+                <p class="heading_2 podcast_tit_sub">A UX Case Study on Creating a Studious Environment</p>
+                <p class="podcast_sub">Apparently we had reached a great height in the atmosphere, for the sky was
                   a dead black, and the stars had ceased to twinkle. By the same illusion which
                   lifts the horizon
                 </p>
@@ -25,6 +26,21 @@
               </div>
             </div>
           </div>
+
+          <!-- @@include ../page_include/layout_list_typ_01.html -->
+
+          <div class="all_podcasts con_pd con-m">
+            <h3 class="heading_2">All Podcasts</h3>
+            <!-- category podcasts -->
+            <div class="category_podcasts">
+              <a href="#none" class="cate_pod on">All Podcasts</a>
+              <a href="#none" class="cate_pod">Startup</a>
+              <a href="#none" class="cate_pod">Marketing</a>
+              <a href="#none" class="cate_pod">Business</a>
+            </div>
+            <!-- //category podcasts -->
+          </div>
+
         </div>
       </div>
       <!-- //contents -->
