--- a/dev/page_dev/contact.html
+++ b/dev/page_dev/contact.html
@@ -4,13 +4,74 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <!-- @@include ../page_include/header.html -->
 
   <!-- container -->
   <div class="container">
 
       <!-- contents -->
-      <div id="contents">
-        contact page
+      <div id="contents" class="page_contact">
+
+        <!-- contact_us -->
+        <div class="contact_us">
+          
+          <div class="contact_us_wrap">
+
+            <div class="contact_input_wrap">
+
+              <div class="contact_input_txt">
+                <h3 class="heading_3">Contact Us</h3>
+                <p>Interested in collaborating? Please fill the form below.</p>
+              </div>
+
+              <div class="contact_input">
+                <input type="text" placeholder="Your full Name">
+                <input type="email" placeholder="Your Email Id">
+                <input type="text" placeholder="Query Related">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input type="submit" value="Subscribe">
+              </div>
+
+            </div>
+
+            <div class="contact_sub">
+
+              <div class="subscribe">
+                <h3>Subscribe</h3>
+
+                <!-- podcasts -->
+                <ul class="podcasts_list">
+                  <li>
+                    <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+                  </li>
+                  <li>
+                    <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+                  </li>
+                </ul>
+                <!-- //podcasts -->
+              </div>
+
+              <div class="socials">
+                <h3>Socials</h3>
+                <ul>
+                  <li><a href="#none" class="ico_facebook_p"></a></li>
+                  <li><a href="#none" class="ico_twitter_p"></a></li>
+                  <li><a href="#none" class="ico_linkedIn_p"></a></li>
+                </ul>
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+        <!-- //contact_us -->
       </div>
       <!-- //contents -->
 
