--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -9,7 +9,7 @@
   <!-- container -->
   <div class="container">
       <!-- contents -->
-      <div id="contents">
+      <div id="contents" class="page_promotion">
 
         <div class="promotion">
             <!-- promo_tit -->
@@ -95,22 +95,22 @@
                     </div>
                     <!-- //btn -->
 
-                    <!-- category potcasts -->
-                    <div class="category_potcasts">
-                      <a href="#none" class="cate_pot on">All Podcasts</a>
-                      <a href="#none" class="cate_pot">Startup</a>
-                      <a href="#none" class="cate_pot">Marketing</a>
-                      <a href="#none" class="cate_pot">Business</a>
+                    <!-- category podcasts -->
+                    <div class="category_podcasts">
+                      <a href="#none" class="cate_pod on">All Podcasts</a>
+                      <a href="#none" class="cate_pod">Startup</a>
+                      <a href="#none" class="cate_pod">Marketing</a>
+                      <a href="#none" class="cate_pod">Business</a>
                     </div>
-                    <!-- //category potcasts -->
+                    <!-- //category podcasts -->
                   </div>
 
-                  <div class="potcasts">
+                  <div class="podcasts">
 
-                    <!-- potcasts -->
-                    <ul class="potcasts_list">
+                    <!-- podcasts -->
+                    <ul class="podcasts_list">
                       <li>
-                        <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a>
+                        <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
                       </li>
                       <li>
                         <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
@@ -122,7 +122,7 @@
                         <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
                       </li>
                     </ul>
-                    <!-- //potcasts -->
+                    <!-- //podcasts -->
 
                     <ul class="sns_list">
                       <div class="ico_big">
@@ -225,7 +225,75 @@
           </div>
         </div>
 
+        <div class="promo_only color_2">
+          <h2 class="heading_1">single blog, single_podcast</h2>
+        </div>
 
+        <!-- producer_post -->
+        <div class="producer_post">
+
+          <!-- producer_post_wrap : 공통 -->
+          <div class="producer_post_wrap">
+            <div class="pro_po_main">
+              <h2 class="heading_2">Apparently we had reached a great height in the atmosphere, for the sky was</h2>
+              <p class="pro_po_con">Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the
+                stars had ceased to twinkle. By the same illusion which lifts the horizon of the
+                sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the
+                middle of an immense dark sphere, whose upper half was strewn with silver. 
+              </p>
+            </div>
+            <div class="pro_po_sub">
+              <h3 class="heading_3">Apparently we had reached a great height in the atmosphere</h3>
+              <p class="pro_po_con">Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the
+                stars had ceased to twinkle. By the same illusion which lifts the horizon of the
+                sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the
+                middle of an immense dark sphere, whose uppe
+              </p>
+              <div class="pro_po_list">
+                <h3 class="heading_3">Apparently we had reached a great height in the atmosphere, for the sky was a dead black</h3>
+                <ul>
+                  <li>• we both celebrate and challenge</li>
+                  <li>• the culture around us as we orient our lives around Jesus</li>
+                  <li>• we want to help you take that next step</li>
+                </ul>
+              </div>
+              <p class="pro_po_con">
+                Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the
+                stars had ceased to twinkle. By the same illusion which lifts the horizon of the
+                sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the
+                middle
+              </p>
+            </div>
+            <div class="pro_po_profile">
+              <div class="pro_po_profile_wrap">
+                <div class="pro_info">
+                  <img src="../../assets/images/contents/profile_s_2.png" alt="eve madien profile">
+                  <span class="name">Eve Madien</span>
+                  <span class="job">Producer & Art Director</span>
+                  <div class="sns">
+                    <ul>
+                      <li><a href="#none" class="facebook_s"></a></li>
+                      <li><a href="#none" class="linkedIn_s"></a></li>
+                      <li><a href="#none" class="instagram_s"></a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="pro_info_con">
+                  <p>Recusandae ea placeat sit rerum quidem
+                    enim sed. Voluptas aut adipisci autem in
+                    sint. Doloremque omnis dolor fuga
+                    consectetur commodi repellendus
+                    molestiae voluptatibusdolorum. Non quae
+                    est velit.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- //producer_post_wrap : 공통 -->
+      
+        </div>
+        <!-- //producer post -->
 
 
         <!-- @@include ../page_include/footer_sponsors.html -->
