--- a/pages/blog.html
+++ b/pages/blog.html
@@ -17,7 +17,7 @@
 <div id="wrapper">
 
   <!-- container -->
-  <div class="container">
+  <div class="container" class="page_blog">
 
       <!-- contents -->
       <div id="contents">
