--- a/pages/single_podcast.html
+++ b/pages/single_podcast.html
@@ -19,9 +19,113 @@
   <!-- container -->
   <div class="container">
 
+      <!-- dark_mode -->
+      <input class="dark_mode" type="checkbox">
+      <!-- // dark_mode -->
+
       <!-- contents -->
-      <div id="contents">
-        single_podcast page
+      <div id="contents" class="page_single_podcast">
+
+        <!-- producer_post -->
+        <div class="producer_post con-m">
+
+          <!-- producer_post_wrap : 공통 -->
+          <div class="producer_post_wrap">
+
+            <div class="pro_po_article">
+              <div class="pro_po_main">
+                <h2 class="heading_2">A podcast for makers</br>and entrepreneurs</h2>
+                <p class="pro_po_con">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                  praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+                  excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia
+                  deserunt mollitia animi, id est laborum et dolorum fuga.
+                  </br></br>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
+                  soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+                  placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+                </p>
+              </div>
+              <div class="pro_po_sub">
+                <h3 class="heading_3">Apparently we had reached a great height in the</br>
+                  atmosphere, for the sky was a dead black
+                </h3>
+                <p class="pro_po_con">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                  praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+                  excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia
+                  deserunt mollitia animi, id est laborum et dolorum fuga.
+                </p>
+                <div class="pro_po_list">
+                  <ul>
+                    <li>• we both celebrate and challenge</li>
+                    <li>• the culture around us as we orient our lives around Jesus</li>
+                    <li>• we want to help you take that next step</li>
+                  </ul>
+                </div>
+                <p class="pro_po_con">
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                  praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+                  excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia
+                  deserunt mollitia animi, id est laborum et dolorum fuga.
+                </p>
+              </div>
+            </div>
+            
+            <!-- pro_po_profile -->
+            <div class="pro_po_profile">
+              <div class="pro_po_profile_wrap">
+                <div class="pro_info">
+                  <img src="../../assets/images/contents/profile_s_1.png" alt="eve madien profile">
+                  <span class="name">Eve Madien</span>
+                  <span class="job">Producer & Art Director</span>
+                  <div class="sns">
+                    <ul>
+                      <li><a href="#none" class="facebook_s"></a></li>
+                      <li><a href="#none" class="linkedIn_s"></a></li>
+                      <li><a href="#none" class="instagram_s"></a></li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="pro_info_con">
+                  <p>Recusandae ea placeat sit rerum quidem
+                    enim sed. Voluptas aut adipisci autem in
+                    sint. Doloremque omnis dolor fuga
+                    consectetur commodi repellendus
+                    molestiae voluptatibusdolorum. Non quae
+                    est velit.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- //pro_po_profile -->
+
+          </div>
+          <!-- //producer_post_wrap : 공통 -->
+
+          <!-- listen_on : 제외 후 사용 -->
+          <div class="listen_on">
+            <h3 class="heading_3">Listen on</h3>
+            <!-- podcasts -->
+            <ul class="podcasts_list">
+              <li>
+                <a href="#none" class="logo_apple"><img src="../assets/images/logo/apple_podcasts.png" alt="apple podcasts"></a>
+              </li>
+              <li>
+                <a href="#none" class="logo_sound_cloud"><img src="../assets/images/logo/sound_cloud.png" alt="sound cloud"></a>
+              </li>
+              <li>
+                <a href="#none" class="google_logo"><img src="../assets/images/logo/google_podcast.png" alt="googl _podcast"></a>
+              </li>
+              <li>
+                <a href="#none" class="spotify_logo"><img src="../assets/images/logo/spotify.png" alt="spotify"></a>
+              </li>
+            </ul>
+            <!-- //podcasts -->
+          </div>
+          <!-- // listen_on : 제외 후 사용 -->
+
+        </div>
+        <!-- //producer post -->
+
       </div>
       <!-- //contents -->
 
